concord_macros/tests/v5/dsl/fail/fail_old_use_auth.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client OldUseAuthApi {
        base https "example.com"
        use_auth HeaderAuth("X-Api-Key")
    }
}

fn main() {}
