concord_macros/tests/v5/dsl/fail/fail_old_use_auth.stderr
error: `use_auth` was removed in v5; use `auth header/query/bearer/basic/certificate ...`
 --> tests/v5/dsl/fail/fail_old_use_auth.rs:7:9
  |
7 |         use_auth HeaderAuth("X-Api-Key")
  |         ^^^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/v5/dsl/fail/fail_old_use_auth.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
